Fix scrollbar issue when rendering new view, add sad Mickey photo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -156,3 +156,21 @@ img {
 .to-rate {
   margin-left: 15px;
 }
+
+#userStarText {
+  margin-left: 19px;
+}
+
+#userStarDisplay {
+  margin-left: 15px
+}
+
+img.missing {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.missing {
+  text-align: center;
+}
